pre text-align fix

--- a/!DATA!/formatting.css
+++ b/!DATA!/formatting.css
@@ -145,6 +145,8 @@ dd p {
 }
 
 pre {
+    text-align: left;
+    text-align-last: auto;
     line-height: 1;
 }
 
